# craftmeet

./: .gitignore  Caddyfile  Dockerfile.caddy  README.md  docker-compose.yml  env_example.txt  pyproject.toml
backend/: Dockerfile  entrypoint.sh  env_example.txt  main.py  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 076676b48250_increase_token_hash_lengths.py  200d7b37e8d7_add_current_year_and_current_month_.py  683db969de97_initial_migration.py  ca724edcc475_initial_migration.py  e674de06520f_initial_migration.py
backend/src/: cache.py  config.py  constants.py  database.py  exceptions.py  limiter.py  logging_config.py  models.py  types.py  utils.py
backend/src/auth/: constants.py  crypto.py  email.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py  token.py
backend/src/live/: managers.py  room.py  router.py  schemas.py  service.py  types.py
backend/src/meeting/: exceptions.py  repository.py  router.py  schemas.py  service.py  utils.py
backend/src/middleware/: jwt.py  request_logging.py
backend/src/summary/: exceptions.py  pdf.py  prompt.py  router.py  save.py  schemas.py  service.py
backend/tests/: conftest.py
backend/tests/auth/: conftest.py  test_forgot_password.py  test_login.py  test_logout.py  test_me.py  test_oauth.py  test_refresh.py  test_reset_password.py  test_router.py  test_signup.py  test_update_user.py  test_verify_email.py
backend/tests/meeting/: conftest.py  test_create_meeting.py  test_delete_meeting.py  test_delete_meetings.py  test_edit_meeting.py  test_get_meeting.py  test_get_meetings.py  test_join_meeting.py  test_leave_meeting.py
frontend/: components.json  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.d.ts  app.html
frontend/src/lib/api/: auth.ts
frontend/src/lib/components/: BottomNav.svelte  EmailModal.svelte  Logo.svelte  Navbar.svelte
frontend/src/lib/components/create/: CreateMeetingForm.svelte  LongAnswerConfig.svelte  MeetingSetup.svelte  MultipleChoiceConfig.svelte  QuestionCard.svelte  RankedVotingConfig.svelte  RatingScaleConfig.svelte  YesNoConfig.svelte
frontend/src/lib/components/dashboard/: EmptyState.svelte  LiveMeetingBanner.svelte  MeetingTable.svelte  MeetingTableRow.svelte  QuickActions.svelte  StatsBar.svelte
frontend/src/lib/components/host/: HostLobby.svelte  HostParticipants.svelte  HostQuestion.svelte
frontend/src/lib/components/ui/badge/: badge.svelte
frontend/src/lib/components/ui/button/: button.svelte
frontend/src/lib/components/ui/card/: card-content.svelte  card-description.svelte  card-footer.svelte  card-header.svelte  card-title.svelte  card.svelte
frontend/src/lib/components/ui/checkbox/: checkbox.svelte
frontend/src/lib/components/ui/input/: input.svelte
frontend/src/lib/components/ui/label/: label.svelte
frontend/src/lib/components/ui/sheet/: sheet-content.svelte  sheet-description.svelte  sheet-footer.svelte  sheet-header.svelte  sheet-overlay.svelte  sheet-title.svelte
frontend/src/lib/stores/: stores.ts
frontend/src/lib/types/: errors.ts  meeting.ts  meta.ts  mock.ts  participant.ts  question.ts  response.ts  user.ts  websocket.ts
frontend/src/lib/utils/: constants.ts  time.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts  layout.css
frontend/src/routes/(private)/: +layout.ts
frontend/src/routes/(private)/account/: +page.svelte  +page.ts
frontend/src/routes/(private)/dashboard/: +page.svelte  +page.ts
frontend/src/routes/(private)/meetings/[slug]/: +page.svelte  +page.ts
frontend/src/routes/(private)/meetings/[slug]/host/: +page.svelte  +page.ts
frontend/src/routes/(private)/meetings/[slug]/summary/: +page.svelte  +page.ts
frontend/src/routes/(private)/meetings/create/: +page.svelte  +page.ts
frontend/src/routes/(public)/(auth)/: +layout.ts
frontend/src/routes/(public)/(auth)/forgot-password/: +page.svelte  +page.ts
frontend/src/routes/(public)/(auth)/login/: +page.svelte  +page.ts
frontend/src/routes/(public)/(auth)/reset-password/: +page.svelte  +page.ts
frontend/src/routes/(public)/(auth)/signup/: +page.svelte  +page.ts
frontend/src/routes/(public)/(auth)/verify-email/: +page.svelte  +page.ts
frontend/src/routes/(public)/contact/: +page.svelte  +page.ts
frontend/src/routes/(public)/forgot-password/: +page.svelte
frontend/src/routes/(public)/login/: +page.svelte
frontend/src/routes/(public)/pricing/: +page.svelte  +page.ts
frontend/src/routes/(public)/privacy/: +page.svelte  +page.ts
frontend/src/routes/(public)/reset-password/: +page.svelte
frontend/src/routes/(public)/signup/: +page.svelte
frontend/src/routes/(public)/terms/: +page.svelte  +page.ts
frontend/src/routes/meetings/[slug]/participant/: +page.svelte  +page.ts
frontend/static/about/: index.html
